--- a/src/template.html
+++ b/src/template.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
+
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<meta name="theme-color" content="#411b8d">
 	%sapper.base%
@@ -16,6 +17,7 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 	<link rel="manifest" href="/site.webmanifest">
+	<meta name="description" content="Mathesis (μάθησις) is a online platform for free ancient greek education. You can find questions and texts, learn the alphabet and more.">
 	%sapper.scripts%
 	%sapper.styles%
 	%sapper.head%
