--- a/src/template.html
+++ b/src/template.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-
+	<script data-ad-client="ca-pub-9686950488573940" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<meta name="theme-color" content="#411b8d">
 	%sapper.base%
