--- a/src/template.html
+++ b/src/template.html
@@ -14,7 +14,10 @@
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-	<meta name="description" content="Mathesis (μάθησις) is a online platform for free ancient greek education. You can find questions and texts, learn the alphabet and more.">
+	<meta name="description" content="Mathesis (μάθησις) is an online platform for free ancient greek education. You can find questions and texts, learn the alphabet and more.">
+	<meta property="og:title" content="Greek Mathesis" />
+	<meta property="og:description" content="Online app for free ancient greek learning. Questions, texts and more." />
+	<meta property="og:image" content="https://raw.githubusercontent.com/eFilipexCode/greek-project/main/home.PNG" />
 	%sapper.scripts%
 	%sapper.styles%
 	%sapper.head%
